[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -87,6 +87,7 @@ lwthemeNeedsRestart.accesskey=R
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
+popupWarning.message=#1 a empachat aqueste site de dobrir una fenèstra popup.;#1 a empachat aqueste site de dobrir #2 fenèstras popup.
 popupWarningButton=Opcions
 popupWarningButton.accesskey=O
 popupWarningButtonUnix=Preferéncias
@@ -98,8 +99,11 @@ popupWarningDontShowFromLocationbar=Afichar pas la barra d'informacion quand se 
 popupShowPopupPrefix=Visualizar '%S'
 
 # missing plugin installer
+installPlugin.message = Volètz installar lo plugin necessari per afichar totes los elements d'aquesta pagina ?
 installPlugin.button.label=Installar %S
+installPlugin.button.accesskey=I
 installPlugin.ignoreButton.label=Demandar pas mai
+installPlugin.ignoreButton.accesskey=N
 
 crashedpluginsMessage.title=Lo plugin %S a plantat.
 crashedpluginsMessage.reloadButton.label=Actualizar la pagina
@@ -112,19 +116,30 @@ crashedpluginsMessage.learnMore=Ne saber mai…
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
 # plugins which are not known to be unsafe. %1$S is the plugin name and %2$S
 # is the site domain.
+pluginActivateNew.message=Autorizar %2$S a executar « %1$S » ?
+pluginActivateMultiple.message=Autorizar %S a executar aquestes plugins ?
 pluginActivate.learnMore=Ne saber mai…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
+pluginActivateOutdated.message=%3$S a empachat l'execucion del plugin obsolèt « %1$S » sus %2$S.
+pluginActivateOutdated.label=Plugin obsolèt
 pluginActivate.updateLabel=Metre a jorn ara...
 # LOCALIZATION NOTE (pluginActivateVulnerable.message, pluginActivateVulnerable.label):
 # These strings are used when an unsafe plugin has no update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
+pluginActivateVulnerable.message=%3$S a empachat l'execucion del plugin vulnerable « %1$S » sus %2$S.
 pluginActivateVulnerable.label=Plugin vulnerable !
+pluginActivate.riskLabel=Quin es lo risc ?
 # LOCALIZATION NOTE (pluginActivateBlocked.message): %1$S is the plugin name, %2$S is brandShortName
+pluginActivateBlocked.message=%2$S a blocat « %1$S » per vòstra proteccion.
 pluginActivateBlocked.label=Desactivat per vòstra proteccion
+pluginActivateDisabled.message=« %S » es desactivat.
 pluginActivateDisabled.label=Desactivat
 pluginActivateDisabled.manage=Gerir los plugins...
+pluginEnabled.message=« %S » es activat sus %S.
+pluginEnabledOutdated.message=Lo plugin obsolèt « %S » es activat sus %S.
+pluginEnabledVulnerable.message=Lo plugin vulnerable « %S » es activat sus %S.
 pluginInfo.unknownPlugin=Desconegut
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
@@ -136,14 +151,25 @@ pluginActivateNow.accesskey=N
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginActivateAlways.label=Activar totjorn
+pluginActivateAlways.accesskey=R
 pluginBlockNow.label=Blocar lo plugin
 pluginBlockNow.accesskey=B
+pluginContinue.label=Daissar activat
 pluginContinue.accesskey=C
 
 # in-page UI
 PluginClickToActivate=C
 PluginVulnerableUpdatable=Aqueste plugin es vulnerable e deu èsser mes a jorn.
 PluginVulnerableNoUpdate=Aqueste plugin possedís de falhas de seguretat.
+
+# infobar UI
+pluginContinueBlocking.label=Contunhar lo blocatge
+pluginContinueBlocking.accesskey=B
+# LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
+# or use "..." if \u2026 doesn't suit traditions in your locale.
+pluginActivateTrigger.label=Autorizar...
+pluginActivateTrigger.accesskey=A
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
@@ -154,6 +180,7 @@ sanitizeButtonOK=Escafar ara
 # LOCALIZATION NOTE (sanitizeButtonClearing): The label for the default
 # button between the user clicking it and the window closing.  Indicates the
 # items are being cleared.
+sanitizeButtonClearing=Escafament
 
 # LOCALIZATION NOTE (sanitizeEverythingWarning2): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History dialog,
@@ -164,24 +191,9 @@ sanitizeEverythingWarning2=Tot l'istoric serà escafat.
 # provided that the user has modified the default set of history items to clear.
 sanitizeSelectedWarning=Tot l'istoric serà escafat.
 
-# Check for Updates in the About Dialog - button labels and accesskeys
-# LOCALIZATION NOTE - all of the following update buttons labels will only be
-# displayed one at a time. So, if a button is displayed nothing else will
-# be displayed alongside of the button. The button when displayed is located
-# directly under the Firefox version in the about dialog (see bug 596813 for
-# screenshots).
-update.checkInsideButton.label=Recercar de mesas a jorn
-update.checkInsideButton.accesskey=C
-update.resumeButton.label=Contunhar lo telecargament de %S…
-update.resumeButton.accesskey=D
-update.openUpdateUI.applyButton.label=Aplicar la mesa a jorn...
-update.openUpdateUI.applyButton.accesskey=Aplicar la mesa a jorn...
-update.restart.updateButton.label=Reaviar per aplicar la mesa a jorn
-update.restart.updateButton.accesskey=R
-update.openUpdateUI.upgradeButton.label=Metre a jorn ara…
-update.openUpdateUI.upgradeButton.accesskey=U
-update.restart.upgradeButton.label=u
-update.restart.upgradeButton.accesskey=U
+# LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
+# version of the update: "Update to 28.0".
+update.downloadAndInstallButton.label=Metre a jorn %S
 
 # RSS Pretty Print
 feedShowFeedNew=u
@@ -190,9 +202,14 @@ menuOpenAllInTabs.label=Tot dobrir dins d'onglets
 
 # History menu
 menuRestoreAllTabs.label=Restablir totes los onglets
+# LOCALIZATION NOTE (menuRestoreAllTabsSubview.label): like menuRestoreAllTabs.label,
+# but used in the history subview in the panel UI, so needs to mention these are *closed* tabs.
 # LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
 # see bug 394759
 menuRestoreAllWindows.label=Restablir totas las fenèstras
+# LOCALIZATION NOTE (menuRestoreAllWindowsSubview.label): like menuRestoreAllWindows.label,
+# but used in the history subview in the panel UI, so needs to mention these are *closed* windows.
+menuRestoreAllWindowsSubview.label=Restablir las fenèstras tampadas
 # LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
@@ -213,9 +230,24 @@ refreshBlocked.goButton.accesskey=A
 refreshBlocked.refreshLabel=%S a empachat lo recargament automatic d'aquesta pagina.
 refreshBlocked.redirectLabel=%S a empachat la redireccion automatica cap a una autra pagina.
 
+# General bookmarks button
+# LOCALIZATION NOTE (bookmarksMenuButton.tooltip):
+# %S is the keyboard shortcut for "Show All Bookmarks"
 # Star button
 starButtonOn.tooltip=Modificar aqueste marcapaginas
 starButtonOff.tooltip=Marcar aquesta pagina
+starButtonOverflowed.label=Marcar aquesta pagina
+starButtonOverflowedStarred.label=Modificar aqueste marcapaginas
+
+# Print button tooltip on OS X
+# LOCALIZATION NOTE (printButton.tooltip):
+# Use the unicode ellipsis char, \u2026,
+# or use "..." if \u2026 doesn't suit traditions in your locale.
+# %S is the keyboard shortcut for "Print"
+
+# New Window button tooltip
+# LOCALIZATION NOTE (newWindowButton.tooltip):
+# %S is the keyboard shortcut for "New Window"
 
 # Offline web applications
 offlineApps.available=Aqueste site web (%S) vòl conservar de donadas sus vòstre ordenador per una utilizacion sens connexion.
@@ -239,13 +271,16 @@ identity.identified.verified_by_you=Avètz apondut una excepcion de seguretat pe
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=La connexion a aqueste site internet es securizada.
+identity.mixed_display_loaded=La connexion cap a aqueste site es pas completament securizada perque possedís d'elements pas chifrats (tals coma d'imatges).
+identity.mixed_active_loaded2=Aqueste site possedís de contengut interactiu pas chifrat (tal coma d'escripts). Qual que siá es en mesura d'afichar vòstras informacions o de modificar lo comportament del site web.
 identity.unencrypted=Vòstra connexion a aqueste site es pas chifrada.
 
 identity.unknown.tooltip=Aqueste site web balha pas d'entresenhas sus son identitat.
 
-identity.ownerUnknown2=Aqueste site web balha pas cap d'entresenhas sus son identitat.
+identity.ownerUnknown2=(desconegut)
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
+identity.chrome=Aquò es una pagina securizada de %S.
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Pagina marcada
@@ -284,13 +319,24 @@ geolocation.shareWithFile=Volètz partejar vòstra localizacion amb lo fichièr 
 # or use "..." if \u2026 doesn't suit traditions in your locale.
 geolocation.learnMore=Ne saber mai…
 
+webNotifications.showForSession=Afichar per aquesta sesilha
+webNotifications.showForSession.accesskey=s
+webNotifications.alwaysShow=Afichar totjorn las notificacions
 webNotifications.alwaysShow.accesskey=A
+webNotifications.neverShow=Blocar totjorn las notificacions 
 webNotifications.neverShow.accesskey=N
+webNotifications.showFromSite=Volètz afichar las notificacions dempuèi %S ?
 
 # Pointer lock UI
 
+pointerLock.allow2=Amagar lo puntador
 pointerLock.allow2.accesskey=H
+pointerLock.alwaysAllow=Autorizar totjorn a l'amagar
+pointerLock.alwaysAllow.accesskey=A
+pointerLock.neverAllow=Autorizar pas jamai a l'amagar
 pointerLock.neverAllow.accesskey=N
+pointerLock.title2=Volètz autorizar l'amagatge del puntador sus %S ?
+pointerLock.autoLock.title2=%S amagarà lo puntador.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
@@ -323,6 +369,9 @@ tabview.title=%S - Gropes d'onglets
 # #1 is the page title of the first tab in the unnamed group, 
 # #2 is the number of remaining tabs.
 tabview.moveToUnnamedGroup.label=#1 e 1 mai;#1 e #2 mai
+
+# LOCALIZATION NOTE (tabviewButton.tooltip): %S is the keyboard shortcut for tab groups
+tabviewButton.tooltip=Organizar los onglets  (%S)
 
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Tèma per defaut
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Tèma per defaut
@@ -373,17 +422,21 @@ webapps.install.accesskey = C
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = Volètz installar « %1$S » a partir del site (%2$S) ?
 webapps.install.success = Aplicacion installada
+webapps.install.inprogress = Installacion en cors
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=Ara, %S es afichat en mòde ecran complet.
 # LOCALIZATION NOTE (fullscreen.rememberDecision): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.rememberDecision=Se remembrar d'aquesta decision per %S
 
+# LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
+
 service.toolbarbutton.label=Servicis
 service.toolbarbutton.tooltiptext=Servicis
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=Servicis
+service.install.ok.label=Activar los servicis
 service.install.ok.accesskey=E
 service.install.learnmore=Ne saber mai…
 
@@ -394,9 +447,12 @@ social.turnOff.accesskey=T
 social.turnOn.label=Activar %S
 social.turnOn.accesskey=T
 social.turnOffAll.label=T
+social.turnOnAll.label=Activar totes los servicis
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
+social.markpageMenu.label=Mandar la pagina a %S
 # LOCALIZATION NOTE (social.marklinkMenu.label): %S is the name of the social provider
+social.marklinkMenu.label=Mandar lo ligam a %S
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
 social.error.message=%1$S se pòt pas connectar actualament amb %2$S.
@@ -459,3 +515,9 @@ slowStartup.helpButton.label = Descobrir cossí l'accelerar
 slowStartup.helpButton.accesskey = Descobrir cossí l'accelerar
 slowStartup.disableNotificationButton.label = M'avertir pas mai
 slowStartup.disableNotificationButton.accesskey = A
+
+
+# LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
+# in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
+# be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
+customizeTips.tip0.learnMore = Ne saber mai
