--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -29,12 +29,14 @@ sortByNameGeneric=Triar per nom
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
+view.sortBy.1.name.label=Triar per nom
 view.sortBy.1.url.label=Triar per emplaçament
 view.sortBy.1.visitCount.label=Triar per nombre de visitas
 view.sortBy.1.keyword.label=Triar per mot clau
 view.sortBy.1.description.label=Triar per descripcion
 view.sortBy.1.dateAdded.label=Triada per data d'apondon
 view.sortBy.1.lastModified.label=Triar per data de darrièra modificacion
+view.sortBy.1.tags.label=Triar per balisas
 
 searchBookmarks=Recercar dins los marcapaginas
 searchHistory=Recercar dins l'istoric
@@ -58,6 +60,9 @@ detailsPane.itemsCountLabel=Un element;#1 elements
 mostVisitedTitle=Los mai visitats
 recentlyBookmarkedTitle=Marcats recentament
 recentTagsTitle=Etiquetas recentas
+# LOCALIZATION NOTE (windows8TouchTitle): this is the name of the folder used
+# to store bookmarks created in Metro mode and share bookmarks between Metro
+# and Desktop.
 
 OrganizerQueryHistory=Istoric
 OrganizerQueryDownloads=Telecargaments
