--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -134,3 +134,6 @@ syncUnlinkConfirm.label=Levar
 featureEnableRequiresRestart=%S deu reaviar per activar aquesta foncionalitat.
 featureDisableRequiresRestart=%S deu reaviar per activar aquesta foncionalitat.
 shouldRestartTitle=Tornar aviar %S
+
+###Preferences::Sync::Firefox Accounts
+# LOCALIZATION NOTE: %S = user's email address.
