--- a/browser/chrome/browser/syncSetup.properties
+++ b/browser/chrome/browser/syncSetup.properties
@@ -49,3 +49,13 @@ existingAccount.change.label = Aquesta causida pòt èsser modificada en selecci
 
 # Several other strings are used (via Weave.Status.login), but they come from
 #  /services/sync
+
+# Firefox Accounts based setup.
+continue.label = Contunhar
+disconnect.verify.title = Desconnectar
+disconnect.verify.heading = Sètz segur ?
+# LOCALIZATION NOTE (disconnect.verify.description): %S will be replaced with
+# brandShortName
+
+# LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
+
