--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -39,6 +39,7 @@ animation      =       animacion
 equation       =       eqüacion
 buttonmenu     =       boton de menú
 whitespace     =       espaci
+pagetablist    =       lista d'onglets
 canvas         =       canvas
 checkmenuitem  =       element de menú de marcar
 label          =       libellat
@@ -72,7 +73,10 @@ definition     =       definicion
 textarea       =       zòna de tèxte
 
 # Text input types
+textInputType_date   =       data
+textInputType_email  =       corrièl
 textInputType_search =       recercar
+textInputType_tel    =       telefòn
 textInputType_url    =       URL
 
 # More sophisticated object descriptions
@@ -94,6 +98,7 @@ objItemOf      =       %1$S %2$S sus %3$S
 # Landmark announcements
 banner         =       bandièra
 complementary  =       complementari
+contentinfo    =       infos contengut
 main           =       principal
 navigation     =       navigacion
 search         =       &brandShortName; manda de rapòrts de plantatge per ajudar &vendorShortName; a rendre vòstre navigador mai estable e securizat
@@ -102,12 +107,19 @@ search         =       &brandShortName; manda de rapòrts de plantatge per ajuda
 # 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
 # 2 is the number of columns within the table.
 # 3 is the number of rows within the table or grid.
+tableInfo = %S amb %S e %S
 # LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tableColumnInfo = 1 colomna;#1 colomnas
 # LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tableRowInfo = 1 linha;#1 linhas
 
 # table or grid cell information
+columnInfo = Colomna %S
+rowInfo = Linha %S
+spansColumns = s'espandís sus %S colomnas
+spansRows = s'espandís sus %S linhas
 
 # Invoked actions
 jumpAction     =      passat
@@ -115,6 +127,7 @@ pressAction    =      quichat
 checkAction    =      marcat
 uncheckAction  =      pas marcat
 selectAction   =      seleccionat
+unselectAction =      pas seleccionat
 openAction     =      dobèrt
 closeAction    =      tampat
 switchAction   =      bascuolat
@@ -126,6 +139,7 @@ cycleAction    =      cicle
 
 # Live regions
 # 'hidden' will be spoken when something disappears in a live region.
+hidden         =      amagat
 
 # Tab states
 tabLoading     =      cargament
@@ -142,6 +156,7 @@ stateCollapsed   =    reduch
 stateUnavailable =    indisponible
 stateRequired    =    requesit
 stateTraversed   =    visitat
+stateHasPopup    =    possedís un popup
 stateSelected    =    seleccionat
 
 # App modes
@@ -153,6 +168,7 @@ quicknav_Simple      = Defaut
 quicknav_Anchor      = Ancòras
 quicknav_Button      = Botons
 quicknav_Combobox    = Listas desenrotlantas
+quicknav_Landmark    = Descripcion de las zònas
 quicknav_Entry       = Entradas
 quicknav_FormElement = Elements de formulari
 quicknav_Graphic     = Imatges
@@ -168,9 +184,17 @@ quicknav_Checkbox    = Casas de marcar
 
 # Shortened role names for braille
 linkAbbr           =       ligam
+pushbuttonAbbr     =       btn
+passwordtextAbbr   =       txtsenhal
+imagemapAbbr       =       imgmap
+figureAbbr         =       fig
 textareaAbbr       =       zòna de tèxte
+tableAbbr          =       tbl
 tableInfoAbbr = zòna de tèxte
 # LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tableColumnInfoAbbr = #1c;#1c
 # LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+tableRowInfoAbbr = #1r;#1r
+cellInfoAbbr = c%Sr%S
