--- a/dom/chrome/layout/printing.properties
+++ b/dom/chrome/layout/printing.properties
@@ -44,7 +44,9 @@ printpreview_error_dialog_title=Error de previsualizacion
 PERR_FAILURE=Una error desconeguda s'es producha pendent l'estampatge.
 
 PERR_ABORT=Lo trabalh d'estampatge es estat arrestat o anullat.
+PERR_NOT_AVAILABLE=D'unas foncionalitats d'impression son pas disponiblas.
 PERR_NOT_IMPLEMENTED=D'unas foncionalitats d'estampatge son pas encara implementadas.
+PERR_OUT_OF_MEMORY=I a pas pro de memòria per imprimir.
 PERR_UNEXPECTED=I a agut un problèma inesperat al moment d'imprimir.
 
 PERR_GFX_PRINTER_NO_PRINTER_AVAILABLE=Cap d'imprimenta pas disponibla.
