--- a/dom/chrome/security/csp.properties
+++ b/dom/chrome/security/csp.properties
@@ -22,10 +22,8 @@ couldNotParseReportURI = a pas pogut analisar lo rapòrt URI : %1$S
 couldNotProcessUnknownDirective = A pas pogut tractar la directiva desconeguda '%1$S'
 # LOCALIZATION NOTE (ignoringUnknownOption):
 # %1$S is the option that could not be understood
-# LOCALIZATION NOTE (reportURInotETLDPlus1):
-# %1$S is the ETLD of the report URI that could not be used
-# LOCALIZATION NOTE (reportURInotSameSchemeAsSelf, reportURInotSamePortAsSelf):
-# %1$S is the report URI that could not be used
+# LOCALIZATION NOTE (reportURInotHttpsOrHttp2):
+# %1$S is the ETLD of the report URI that is not HTTP or HTTPS
 # LOCALIZATION NOTE (pageCannotSendReportsTo):
 # %1$S is the URI of the page with the policy
 # %2$S is the report URI that could not be used
@@ -47,6 +45,8 @@ allowDirectiveIsDeprecated = la directiva « allow » es obsoleta, utilizatz l
 # inline style refers to CSS code that is embedded into the HTML document.
 # LOCALIZATION NOTE (scriptFromStringBlocked):
 # eval is a name and should not be localized.
+# LOCALIZATION NOTE (hostNameMightBeKeyword):
+# %1$S is the hostname in question and %2$S is the keyword
 
 # CSP Errors:
 policyURINotAlone = La directiva « policy-uri » pòt solament aparéisser sola
