--- a/toolkit/chrome/global/aboutTelemetry.properties
+++ b/toolkit/chrome/global/aboutTelemetry.properties
@@ -38,6 +38,8 @@ histogramAverage = mejana
 
 histogramSum = soma
 
+histogramCopy = Copiar
+
 disableTelemetry = Desactivar la telemetria
 
 enableTelemetry = Activar la telemetria
