--- a/toolkit/chrome/search/search.properties
+++ b/toolkit/chrome/search/search.properties
@@ -4,6 +4,7 @@
 
 addEngineConfirmTitle=Apondre un motor de recèrca
 addEngineConfirmation=Apondre « %S » a la lista dels motors disponibles dins la barra de recèrca ?\n\nA partir de : %S
+addEngineAsCurrentText=Ne far lo mot&or de recèrca corrent
 addEngineAddButtonLabel=Apondre
 
 error_loading_engine_title=Error de telecargament
