--- a/webapprt/webapprt/overrides/dom.properties
+++ b/webapprt/webapprt/overrides/dom.properties
@@ -13,13 +13,13 @@ DontAskAgain=Demandar &pas mai
 JSURLLoadBlockedWarning=Un ensag de cargament d'una URL en JavaScript : dempuèi un òste\nqu'aficha de contengut que proven d'un autre òste\nes estat blocat pel gestionari de seguretat.
 WindowCloseBlockedWarning=Los escripts pòdon pas tampar una fenèstra qu'es pas estada doberta per un escript.
 OnBeforeUnloadTitle=Sètz segur ?
-OnBeforeUnloadMessage=Aquesta pagina demanda de confirmar sa tampadura ; es possible que de donadas picadas sián pas enregistradas.
-OnBeforeUnloadStayButton=Demorar sus la pagina
-OnBeforeUnloadLeaveButton=Quitar la pagina
+OnBeforeUnloadMessage=Aquesta aplicacion es demanda de confirmar que volètz partir - las donadas picadas qu'avètz picadas devon èsser enregistradas.
+OnBeforeUnloadStayButton=Demorar
+OnBeforeUnloadLeaveButton=Quitar
 UnexpectedCanvasVariantStyle=canvas : una temptativa per afectar una valor a « strokeStyle » o « fillStyle », qu'es ni una cadena, ni un « CanvasGradient » ni un « CanvasPattern », es estada ignorada.
 EmptyGetElementByIdParam=Una cadena voida es estada transmesa a getElementById().
 LowMemoryTitle=Warning: Pauc de memòria
-LowMemoryMessage=Un escript sus aquesta pagina s'es arrestat per çò que i a pauc de memòria.
+LowMemoryMessage=Un escript d'aplicacion s'es arrestat per çò que i a pas gaire de memòria.
 SpeculationFailed=Un arbre non equilibrat es estat escrich en utilizant document.write() provocant una novèla analisi de donadas provenent de la ret. Per mai d'informacions, consultatz  https://developer.mozilla.org/en/Optimizing_Your_Pages_for_Speculative_Parsing
 DocumentWriteIgnored=Un apèl a document.write() d'un escript extèrne carga d'un biais asincròn es estat ignorat.
 FormValidationTextTooLong=Acorchissètz aqueste camp a %S caractèrs o mens (utilizatz actualament %S caractèrs).
