--- a/webapprt/webapprt/webapp.properties
+++ b/webapprt/webapprt/webapp.properties
@@ -27,6 +27,7 @@ geolocation.remember=Se remembrar d'aquela causida
 # LOCALIZATION NOTE (desktop-notification.title): %S will be replaced with the
 # name of the webapp.
 desktop-notification.allow=Afichar
+desktop-notification.deny=Afichar pas
 desktop-notification.remember=Se remembrar d'aquela causida
 
 # LOCALIZATION NOTE (webapps.install.title): %S will be replaced with the name
