--- a/browser/chrome/browser/devtools/app-manager.properties
+++ b/browser/chrome/browser/devtools/app-manager.properties
@@ -11,12 +11,19 @@ device.deviceSize=Talha de l'aparelh : %1$Sx%2$S (%3$S DPI)
 connection.connectedToDevice=Connectat a %1$S
 project.installing=Installacion en cors…
 project.installed=Installat !
+validator.invalidManifestURL=L'URL del manifèste « %S » es invalida
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
+validator.invalidManifestJSON=Lo manifèste de l'aplicacion web « %1$S » es pas un fichièr JSON valid : %2$S
+validator.noAccessManifestURL=Impossible de legir lo fichièr manifèste « %1$S » : %2$S
 # LOCALIZATION NOTE (validator.invalidHostedManifestURL): %1$S is the URI of
 # the manifest, %2$S is the error message.
+validator.invalidHostedManifestURL=L'URL del manifèste albergat « %1$S » es invalida : %2$S
+validator.invalidProjectType=Tipe de projècte « %S » desconegut
 # LOCALIZATION NOTE (validator.missNameManifestProperty, validator.missIconsManifestProperty):
 # don't translate 'icons' and 'name'.
-# LOCALIZATION NOTE (validator.invalidLaunchPathBadHttpCode): %1$S is the URI of
+validator.missNameManifestProperty=Lo camp obligatòri « name » es absent del manifèste.
+validator.missIconsManifestProperty=Lo camp « icons » es absent del manifèste.
+# LOCALIZATION NOTE (validator.accessFailedLaunchPathBadHttpCode): %1$S is the URI of
 # the launch document, %2$S is the http error code.
 
