--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -21,6 +21,7 @@ DebuggerWindowTitle=Desbugador del navigador
 
 # LOCALIZATION NOTE (DebuggerWindowScriptTitle):
 # The title displayed for the debugger window when a script is selected.
+DebuggerWindowScriptTitle=Desbugador del navigador - %S
 
 # LOCALIZATION NOTE (ToolboxDebugger.tooltip):
 # This string is displayed in the tooltip of the tab when the debugger is
@@ -48,6 +49,12 @@ pauseButtonTooltip=Metre en pausa (%S)
 # button when the debugger is in a paused state.
 resumeButtonTooltip=Contunhar (%S)
 
+# LOCALIZATION NOTE (startTracingTooltip): The label that is displayed on the trace
+# button when execution tracing is stopped.
+
+# LOCALIZATION NOTE (stopTracingTooltip): The label that is displayed on the trace
+# button when execution tracing is started.
+
 # LOCALIZATION NOTE (stepOverTooltip): The label that is displayed on the
 # button that steps over a function call.
 stepOverTooltip=Contunhar (%S)
@@ -68,8 +75,18 @@ noGlobalsText=Pas cap de variabla globala
 # when there are no scripts.
 noSourcesText=Aquesta pagina a pas cap de font.
 
-# LOCALIZATION NOTE (noEventsTExt): The text to display in the events tab
+# LOCALIZATION NOTE (noEventListenersText): The text to display in the events tab
 # when there are no events.
+
+# LOCALIZATION NOTE (noStackFramesText): The text to display in the call stack tab
+# when there are no stack frames.
+noStackFramesText=Pas cap de pila d'afichar.
+
+# LOCALIZATION NOTE (noStackFramesText): The text to display in the traces tab
+# when there are no function calls.
+
+# LOCALIZATION NOTE (tracingNotStartedText): The text to display in the traces tab
+# when when tracing hasn't started yet.
 
 # LOCALIZATION NOTE (eventCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle an event breakpoint.
@@ -95,12 +112,15 @@ batteryEvents=Àudio
 clipboardEvents=Pòrtapapièr (clipboard)
 compositionEvents=Composicion
 deviceEvents=Periferic
+displayEvents=Afichar
 interactionEvents=Interaccion
 keyboardEvents=Clavièr
 mouseEvents=Mirga
 mutationEvents=Mutacion
 navigationEvents=Navigacion
 pointerLockEvents=Mèdia HTML5
+timeEvents=Ora
+otherEvents=Autres
 
 # LOCALIZATION NOTE (blackBoxCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle black boxing its associated
@@ -121,6 +141,10 @@ emptyChromeGlobalsFilterText=Filtrar las var. globalas (%S)
 # LOCALIZATION NOTE (emptyVariablesFilterText): This is the text that
 # appears in the filter text box for the variables view container.
 emptyVariablesFilterText=Filtrar las variablas
+
+# LOCALIZATION NOTE (emptyPropertiesFilterText): This is the text that
+# appears in the filter text box for the editor's variables view bubble.
+emptyPropertiesFilterText=Proprietats de l'imprimenta
 
 # LOCALIZATION NOTE (searchPanelFilter): This is the text that appears in the
 # filter panel popup for the filter scripts operation.
@@ -166,9 +190,12 @@ loadingText=Cargament...
 # LOCALIZATION NOTE (errorLoadingText): The text that is displayed in the debugger
 # viewer when there is an error loading a file
 
-# LOCALIZATION NOTE (emptyStackText): The text that is displayed in the watch
-# expressions list to add a new item.
+# LOCALIZATION NOTE (addWatchExpressionText): The text that is displayed in the
+# watch expressions list to add a new item.
 addWatchExpressionText=Apondre una expression espiona
+
+# LOCALIZATION NOTE (addWatchExpressionButton): The button that is displayed in the
+# variables view popup.
 
 # LOCALIZATION NOTE (emptyVariablesText): The text that is displayed in the
 # variables pane when there are no variables to display.
@@ -189,6 +216,17 @@ watchExpressionsScopeLabel=Expressions espionas
 # the global scope.
 globalScopeLabel=globala
 
+# LOCALIZATION NOTE (variablesViewErrorStacktrace): This is the text that is
+# shown before the stack trace in an error.
+
+# LOCALIZATION NOTE (variablesViewMoreObjects): the text that is displayed
+# when you have an object preview that does not show all of the elements. At the end of the list
+# you see "N more..." in the web console output.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of remaining items in the object
+# example: 3 more…
+
 # LOCALIZATION NOTE (variablesEditableNameTooltip): The text that is displayed
 # in the variables list on an item with an editable name.
 variablesEditableNameTooltip=Clic doble per modificar
@@ -204,6 +242,19 @@ variablesCloseButtonTooltip=Clicar per suprimir
 # LOCALIZATION NOTE (variablesEditButtonTooltip): The text that is displayed
 # in the variables list on a getter or setter which can be edited.
 variablesEditButtonTooltip=Clicar per definir la valor
+
+# LOCALIZATION NOTE (variablesEditableValueTooltip): The text that is displayed
+# in a tooltip on the "open in inspector" button in the the variables list for a
+# DOMNode item.
+
+# LOCALIZATION NOTE (configurable|...|Tooltip): The text that is displayed
+# in the variables list on certain variables or properties as tooltips.
+# Expanations of what these represent can be found at the following links:
+# https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/defineProperty
+# https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/isExtensible
+# https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/isFrozen
+# https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object/isSealed
+# It's probably best to keep these in English.
 
 # LOCALIZATION NOTE (variablesSeparatorLabel): The text that is displayed
 # in the variables list as a separator between the name and value.
