--- a/browser/chrome/browser/tabbrowser.properties
+++ b/browser/chrome/browser/tabbrowser.properties
@@ -21,6 +21,11 @@ tabs.emptyTabTitle=Onglet novèl
 tabs.closeTab=Tampar l'onglet
 tabs.close=Tampar
 tabs.closeWarningTitle=Confirmar la tampadura
-tabs.closeWarningMultipleTabs=Sètz a mand de tampar %S onglets. Sètz segur(a) que volètz contunhar ?
+# LOCALIZATION NOTE (tabs.closeWarningMultiple):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# The singular form is not considered since this string is used only for
+# multiple tabs.
+tabs.closeWarningMultiple=;Sètz a mand de tampar #1 onglets. Sètz segur(a) que volètz contunhar ?
 tabs.closeButtonMultiple=Tampar los onglets
 tabs.closeWarningPromptMe=M'alertar quand ensagi de tampar mai d'un onglet
