--- a/browser/metro/chrome/browser.properties
+++ b/browser/metro/chrome/browser.properties
@@ -17,6 +17,8 @@ browser.search.contextTextSearchLabel2=Recèrca %S per « %S »
 # Contextual Appbar - Button Labels
 
 
+contextAppbar2.hide.bookmarks=Marcapaginas dinamics
+contextAppbar2.hide.recentHistory=Amagar
 
 # LOCALIZATION NOTE (contextAppbar2.delete): Deletes selected pages.
 contextAppbar2.delete=Escafar
@@ -27,10 +29,13 @@ contextAppbar2.delete=Escafar
 # LOCALIZATION NOTE (contextAppbar2.clear): Unselects pages without modification.
 
 # Clear private data
+clearPrivateData.clearButton=Netejar
+# LOCALIZATION NOTE (clearPrivateData.message2): #1 is optionsCharm
 
 # Settings Charms
 aboutCharm1=A prepaus
 optionsCharm=Opcions
+searchCharm=Recercar
 
 # General
 # LOCALIZATION NOTE (browserForSaveLocation): Title for the "Save..." file picker dialog
@@ -40,7 +45,7 @@ browserForOpenLocation=Dobrir un emplaçament
 
 # Download Manager
 downloadsUnknownSize=Talha desconeguda
-downloadRun=Executar
+downloadOpen=Dobrir
 downloadSave=Enregistrar
 downloadCancel=Anullar
 downloadTryAgain=Ensajatz tornarmai
@@ -52,7 +57,7 @@ alertDownloads=Telecargaments
 alertDownloadsStart=Telecargament : %S
 # LOCALIZATION NOTE (alertDownloadsStart2): Used in a notification bar for download progress
 # #1 is the file name, #2 is the amount downloaded so far / total amount to download, and #3 is seconds remaining.
-# LOCALIZATION NOTE (alertDownloadSave): #1 is the file name, #2 is the file size, #3 is the file host
+# LOCALIZATION NOTE (alertDownloadSave2): #1 is the file name, #2 is the file size, #3 is the file host
 # LOCALIZATION NOTE (alertDownloadMultiple): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of files, #2 is (amount downloaded so far / total amount to download) and #3 is seconds remaining
@@ -64,6 +69,7 @@ alertDownloadsStart=Telecargament : %S
 # LOCALIZATION NOTE (popupWarning.message): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
+popupWarning.message=#1 a empachat aqueste site de dobrir una fenèstra popup.;#1 a empachat aqueste site de dobrir #2 fenèstras popup.
 
 # ContentPermissionsPrompt
 contentPermissions.neverForSite=Pas jamai per aqueste site
