--- a/browser/pdfviewer/viewer.properties
+++ b/browser/pdfviewer/viewer.properties
@@ -57,6 +57,14 @@ page_rotate_ccw.title=Rotacion antiorària
 page_rotate_ccw.label=Rotacion antiorària
 page_rotate_ccw_label=Rotacion antiorària
 
+
+# Document properties dialog box
+document_properties_file_name=Nom del fichièr :
+document_properties_title=Títol :
+document_properties_subject=Subjècte :
+document_properties_keywords=Mots claus :
+document_properties_close=Tampar
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
