--- a/dom/chrome/layout/css.properties
+++ b/dom/chrome/layout/css.properties
@@ -25,7 +25,7 @@ PEImportBadURI=URI invalida dins una règla @import : « %1$S ».
 PEImportUnexpected=« %1$S » inesperat trobat dins @import.
 PEGroupRuleEOF2=Fin de règla @media o @-moz-document
 PEGroupRuleNestedAtRule=La règla %1$S es pas autorizada dins una règla @media o @-moz-document.
-PEMozDocRuleBadFunc=url(), url-prefix(), o domain() inesperats dins una règla @-moz-document, mas « %1$S » es estat trobat.
+PEMozDocRuleBadFunc2=url(), url-prefix(), o domain()  o regexp() inesperats dins una règla @-moz-document, mas « %1$S » es estat trobat.
 PEMozDocRuleNotURI=URI inesperada dins una règla @-moz-document, mas « %1$S » es estat trobat.
 PEMozDocRuleNotString=Foncion regexp() esperada dins una règla @-moz-document, mas « %1$S » trobat.
 PEMozDocRuleEOF=URI « next » dins una règla @-moz-document
@@ -65,7 +65,6 @@ PEPseudoSelNotPE=Pseudoelement esperat, mas « %1$S » es estat trobat.
 PEPseudoSelDoubleNot=Una pseudoclassa de negacion pòt pas èsser negada « %1$S ».
 PEPseudoSelPEInNot=Los pseudoelements pòdon pas èsser negats « %1$S ».
 PEPseudoSelNewStyleOnly=Aqueste pseudoelement deu utilizar la forma « :: » : « %1$S ».
-PEPseudoSelTrailing=Un token es estat trobat aprèp un pseudoelement, que deu èsser la darrièra partida d'un selector : « %1$S ».
 PEPseudoSelMultiplePE=Pseudoelement « %1$S » excedentari.
 PEPseudoSelUnknown=Pseudoclassa o pseudoelement « %1$S » desconegut.
 PENegationEOF=selector al sen d'una negacion
@@ -117,6 +116,8 @@ PEBadFontBlockEnd=Expected '}' per acabar la règla @font-face mas avèm trobat'
 PEAnonBoxNotAlone=Bóstia anonima imprevista.
 PEFFVBlockStart=zòna de tèxte
 PEFFVValueSetStart='}' esperat per acabar la règla @font-face mas avèm trobat'%1$S'.
+PEFFVNoFamily='}' esperat per acabar la règla @font-feature-values mas avèm trobat '%1$S'.
+PEFFVUnexpectedBlockEnd=Expected '}' per acabar la règla @font-feature-values mas avèm trobat '%1$S'.
 PEFFVExpectedIdent=Un nombre èra esperat, mas « %1$S » es estat trobat.
 PEFFVValueDefinitionTrailing=Fin de valor esperada mas '%1$S' trobat.
 PEBadDirValue=« ltr » o « rtl » esperat dins lo selector de direccion, mas « %1$S » trobat.
@@ -129,3 +130,7 @@ PESupportsConditionExpectedCloseParen=« ) » esperada al moment de l'analisi 
 PESupportsConditionExpectedStart2=« not », « ( » o foncion esperat al moment de l'analisi de la condicion de @supports, mas « %1$S » trobat.
 PESupportsConditionExpectedNot=« not » esperat al moment de l'analisi de la condicion de @supports, mas « %1$S » trobat..
 PESupportsGroupRuleStart=Esperàvem '{' per començar la règla @font-face mas avèm trobat '%1$S'.
+PEExpectedNoneOrURL=« none » o URL esperat, mas « %1$S » trobat.
+PEVariableEOF=variabla
+PEVariableEmpty=Fin de valor esperada mas « %1$S » trobat.
+PEExpectedVariableName=Identificant per un nom d'atribut inesperat, mas « %1$S » es estat trobat.
