--- a/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/toolkit/chrome/global/devtools/styleinspector.properties
@@ -18,9 +18,9 @@ panelTitle=Inspector d'estils
 # the rules which hold that specific property. For every rule, the rule status
 # is also displayed: a rule can be the best match, a match, a parent match, or a
 # rule did not match the element the user has highlighted.
-rule.status.BEST=Melhora corréspondéncia
+rule.status.BEST=Melhora correspondéncia
 rule.status.MATCHED=Correspondéncia
-rule.status.PARENT_MATCH=Correspondéncia parenta
+rule.status.PARENT_MATCH=Correspondéncia d'un parent
 
 # LOCALIZATION NOTE (rule.sourceElement, rule.sourceInline): For each
 # style property the panel shows the rules which hold that specific property.
@@ -67,10 +67,22 @@ ruleView.contextmenu.selectAll=Seleccionar tot
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copy): Text displayed in the rule view
 # context menu.
+ruleView.contextmenu.copy=Copiar
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copy.accessKey): Access key for
 # the rule view context menu "Select all" entry.
-ruleView.contextmenu.copy.accessKey=A
+
+# LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources): Text displayed in the rule view
+# context menu.
+
+# LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources.accessKey): Access key for
+# the rule view context menu "Show original sources" entry.
+
+# LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources): Text displayed in the rule view
+# context menu.
+
+# LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources.accessKey): Access key for
+# the rule view context menu "Show CSS sources" entry.
 
 # LOCALIZATION NOTE (computedView.contextmenu.selectAll): Text displayed in the
 # computed view context menu.
@@ -78,7 +90,6 @@ computedView.contextmenu.selectAll=Seleccionar tot
 
 # LOCALIZATION NOTE (computedView.contextmenu.selectAll.accessKey): Access key for
 # the computed view context menu "Select all" entry.
-computedView.contextmenu.selectAll.accessKey=A
 
 # LOCALIZATION NOTE (computedView.contextmenu.copy): Text displayed in the
 # computed view context menu.
@@ -86,4 +97,3 @@ computedView.contextmenu.copy=Copiar
 
 # LOCALIZATION NOTE (computedView.contextmenu.copy.accessKey): Access key for
 # the computed view context menu "Select all" entry.
-computedView.contextmenu.copy.accessKey=C
