[oc] update from Pootle (mobile)

--- a/mobile/android/chrome/browser.properties
+++ b/mobile/android/chrome/browser.properties
@@ -16,8 +16,14 @@ alertCantOpenDownload=Impossible de dobrir lo fichièr. Lo podètz enregistrar.
 alertDownloadsSize=Telecargament tròp voluminós
 alertDownloadsNoSpace=Espaci d'emmagazinatge insufisent
 alertDownloadsToast=Telecargament aviat...
+alertDownloadsResume=Tornar prene
+alertDownloadsCancel=Anullar
 
 alertFullScreenToast=Picar sus RETORN per demorar en mòde ecran complet
+
+# LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
+# %S will be replaced by the name of the search engine (exposed by the current page)
+# that has been added; for example, 'Google'.
 
 downloadCancelPromptTitle=Anullar lo telecargament
 downloadCancelPromptMessage=Sètz segur que volètz anullar aqueste telecargament ?
@@ -47,6 +53,7 @@ notificationRestart.button=Tornar aviar
 
 # LOCALIZATION NOTE (popup.message): Semicolon-separated list of plural forms.
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
+popup.dontAskAgain=Demandar pas mai per aqueste site
 popup.show=Afichar
 
 # SafeBrowsing
@@ -69,6 +76,7 @@ identity.identified.verified_by_you=Avètz apondut una excepcion de seguretat pe
 identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
 identity.encrypted2=Connexion chifrada
+identity.ownerUnknown3=(desconegut)
 
 # Geolocation UI
 geolocation.allow=Partejar sa localizacion
@@ -82,6 +90,7 @@ geolocation.dontAskAgain=Demandar pas mai per aqueste site
 
 # Desktop notification UI
 desktopNotification.allow=Autorizar
+desktopNotification.dontAllow=Interdire
 # LOCALIZATION NOTE (desktopNotification.useNotifications): Label that will be
 # used in site settings dialog.
 desktopNotification.useNotifications=Utilizar las notificacions
@@ -90,8 +99,11 @@ desktopNotification.useNotifications=Utilizar las notificacions
 desktopNotification.dontAskAgain=Demandar pasmai per aqueste site
 
 # Contacts API
+contacts.allow=Autorizar
+contacts.dontAllow=Interdire
 # LOCALIZATION NOTE (contacts.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
+contacts.dontAskAgain=Demandar pas mai per aqueste site
 
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
@@ -101,7 +113,10 @@ newtabpopup.opened=Novèl onglet dobèrt;#1 novèls onglets dobèrts
 newprivatetabpopup.opened=Novèl onglet de nav. privada dobèrt;#1 novèls onglets de nav. privada dobèrts
 
 # Offline web applications
+offlineApps.ask=%S vòl emmagazinar de donadas sus vòstre aparelh per un usatge fòra connexion.
+offlineApps.dontAskAgain=Demandar pas mai per aqueste site
 offlineApps.allow=Autorizar
+offlineApps.dontAllow2=Interdire
 
 # LOCALIZATION NOTE (offlineApps.storeOfflineData): Label that will be used in
 # site settings dialog.
@@ -112,10 +127,12 @@ indexedDBQuota.wantsTo=%S vòl emmagazinar fòrça donadas sus vòstre aparelh p
 
 # LOCALIZATION NOTE (password.savePassword): Label that will be used in
  # site settings dialog.
+password.savePassword=Enregistrar lo senhal
 # LOCALIZATION NOTE (password.save): This should match
 # saveButton in passwordmgr.properties
 # LOCALIZATION NOTE (password.dontSave): This should match
 # dontSaveButton in passwordmgr.properties
+password.dontSave=Enregistrar pas
 
 # LOCALIZATION NOTE (browser.menu.showCharacterEncoding): Set to the string
 # "true" (spelled and capitalized exactly that way) to show the "Character
@@ -131,6 +148,8 @@ intl.charsetmenu.browser.static=iso-8859-1,utf-8,iso-8859-15,x-gbk,big5,iso-2022
 
 # Text Selection
 selectionHelper.textCopied=Tèxte copiat dins lo quichapapièrs
+
+# Casting
 
 # Context menu
 contextmenu.openInNewTab=Dobrir dins un onglet novèl
@@ -151,6 +170,7 @@ contextmenu.shareImage=Enregistrar l'imatge
 # The label of the contextmenu item which allows you to search with your default search engine for
 # the text you have selected. %S is the name of the search engine. For example, "Google".
 contextmenu.saveImage=Enregistrar l'imatge
+contextmenu.setImageAs=Enregistrar l'imatge jos
 contextmenu.addSearchEngine=Apondre un motor de recèrca
 contextmenu.playMedia=Lectura
 contextmenu.pauseMedia=Pausa
@@ -160,8 +180,6 @@ contextmenu.saveVideo=Enregistrar la vidèo
 contextmenu.saveAudio=Enregistrar l'audio
 
 contextmenu.copy=Copiar
-contextmenu.copyAll=Copiar tot
-contextmenu.selectWord=Seleccionar de mots
 contextmenu.selectAll=Seleccionar tot
 contextmenu.paste=Empegar
 
@@ -175,6 +193,7 @@ inputWidgetHelper.datetime-local=Causir una data e un orari
 inputWidgetHelper.time=Causir un orari
 inputWidgetHelper.week=Causir una setmana
 inputWidgetHelper.month=Causir un mes
+inputWidgetHelper.cancel=Anullar
 inputWidgetHelper.set=Definir
 inputWidgetHelper.clear=Escafar
 
@@ -199,11 +218,13 @@ webapps.manifestInstallError=Manifèste de l'aplicacion invalid
 webapps.networkInstallError=Impossible de telecargar lo manifèste
 
 # Click to play plugins
+clickToPlayPlugins.message2=%S necessita un plugin. Lo volètz utilizar ?
 # LOCALIZATION NOTE (clickToPlayPlugins.dontAskAgain): This label appears next to a
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 clickToPlayPlugins.dontAskAgain=Demandar pas mai per aqueste site
 # LOCALIZATION NOTE (clickToPlayPlugins.playPlugins): Label that
 # will be used in site settings dialog.
+clickToPlayPlugins.activatePlugins=Connexions activas
 
 # Site settings dialog
 # LOCALIZATION NOTE (siteSettings.labelToValue): This string will be used to
@@ -222,6 +243,14 @@ remoteIncomingPromptTitle=Connexion entranta
 remoteIncomingPromptMessage=Una requèsta entranta per permetre una connexion de desbugatge a distància es estada detectada. Un client distant pòt prene lo contraròtle complet de vòstre navigador ! Autorizar la connexion ?
 remoteIncomingPromptDisable=Desactivar
 remoteIncomingPromptAccept=D'acòrdi
+remoteIncomingPromptCancel=Anullar
+
+# LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteNotificationGenericName): a generic name to use
+# if the name of the app is not available.
+remoteNotificationGenericName=App
+# LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
+# the remote debugger server is listening.
 
 # Helper apps
 helperapps.open=Dobrir
@@ -230,6 +259,9 @@ helperapps.dontAskAgain=Demandar pas mai per aqueste site
 helperapps.openWithApp2=Dobrir amb l'aplicacion %S
 helperapps.openWithList2=Dobrir amb una aplicacion
 helperapps.always=Totjorn
+helperapps.never=Pas jamai
+helperapps.saveToDisk=Telecargar
+helperapps.alwaysUse=Totjorn
 
 #Lightweight themes
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
@@ -247,3 +279,7 @@ getUserMedia.shareRequest.label = Partejar
 #Reader mode
 
 #Open in App
+openInApp.pageAction = Dobrir amb l'aplicacion
+openInApp.ok = D'acòrdi
+openInApp.cancel = Anullar
+
