--- a/mobile/android/chrome/pippki.properties
+++ b/mobile/android/chrome/pippki.properties
@@ -8,11 +8,13 @@ nssdialogs.cancel.label=Anullar
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/pippki.dtd
 downloadCert.title=Telecargament del certificat
 downloadCert.message1=Se vos a demandat de confirmar una autoritat de certificacion novèla (AC).
+downloadCert.viewCert.label=Afichar
 downloadCert.trustSSL=Confirmar per identificar de sites Web.
 downloadCert.trustEmail=Confirmar per identificar los utilizaires de corrièr.
 downloadCert.trustObjSign=Confirmar per identificar los desvolopaires de logicials.
 caCertExists.title=Lo certificat exitís.
 caCertExists.message=Lo certificat exitís ja.
+clientAuthAsk.viewCert.label=Afichar
 
 certmgr.title=Detalhs del certificat
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/certManager.dtd
