--- a/mobile/android/chrome/aboutReader.properties
+++ b/mobile/android/chrome/aboutReader.properties
@@ -9,7 +9,7 @@ aboutReader.colorSchemeLight=Leugièr
 aboutReader.colorSchemeDark=Negre
 aboutReader.colorSchemeSepia=Sèpia
 
-# LOCALIZATION NOTE (aboutReader.fontTypeCharis, aboutReader.fontTypeOpenSans):
+# LOCALIZATION NOTE (aboutReader.fontTypeSerif, aboutReader.fontTypeSansSerif):
 # These are the names of the fonts that are used.
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
