--- a/mobile/android/chrome/config.properties
+++ b/mobile/android/chrome/config.properties
@@ -2,18 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-addPref.title=Apondre
-addPref.selectType=Seleccionar lo :
-addPref.type.string=Cadena
-addPref.type.integer=Entièr
-addPref.type.boolean=Boolean
-addPref.enterName=Picar lo nom :
+newPref.changeButton=Cambiar
 
-togglePref.label=Bascuolar
-modifyPref.label=Modificar
-modifyPref.selectText=Seleccionar la valor per %1$S :
-modifyPref.promptText=Picar la valor per %1$S :
-modifyPref.numberErrorTitle=Valor invalida
-modifyPref.numberErrorText=Lo tèxte qu'avètz picat es pas un nombre
-
-resetPref.label=Reïnicializar
+pref.toggleButton=Bascuolar
+pref.resetButton=Reïnicializar
