--- a/mobile/android/chrome/sync.properties
+++ b/mobile/android/chrome/sync.properties
@@ -31,3 +31,8 @@ sync.setup.tryagain=Tornar ensajar
 sync.setup.manual=Configuracion manuala
 
 sync.message.notabs=Pas cap d'onglet de vòstres autres ordenadors.
+
+# LOCALIZATION NOTE (promoBanner.message.text): First part of the message displayed in a
+# banner on about:home. The final space separates this text from the link.
+
+# LOCALIZATION NOTE (promoBanner.message.link): Second part of the message, styled as a link.
